Restructure static app for GitHub Pages root deployment

--- a/editor.html
+++ b/editor.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blueprint Builder</title>
-    <link rel="stylesheet" href="./style.css" />
+    <title>Blueprint Builder Editor</title>
+    <link rel="stylesheet" href="./assets/style.css" />
   </head>
   <body>
     <header class="topbar">
@@ -24,6 +24,6 @@
       <canvas id="blueprint-canvas"></canvas>
     </main>
 
-    <script type="module" src="./script.js"></script>
+    <script type="module" src="./src/script.js"></script>
   </body>
 </html>
