Add snapping improvements, zoom controls, and blueprint styling

--- a/editor.html
+++ b/editor.html
@@ -15,8 +15,14 @@
       </div>
       <div class="tool-group">
         <button id="mode-toggle">Toggle 2D / ISO</button>
+        <button id="zoom-in-btn">Zoom In (+)</button>
+        <button id="zoom-out-btn">Zoom Out (-)</button>
         <button id="undo-btn">Undo</button>
         <button id="redo-btn">Redo</button>
+      </div>
+      <div class="tool-group tool-group--checks">
+        <label><input id="snap-grid-toggle" type="checkbox" checked /> Snap to Grid</label>
+        <label><input id="snap-mid-toggle" type="checkbox" checked /> Snap to Midpoints</label>
       </div>
       <div class="status" id="status">Mode: 2D</div>
     </header>
