--- a/editor.html
+++ b/editor.html
@@ -21,6 +21,9 @@
           <div class="tool-grid">
             <button class="tool-button" data-tool="select" type="button">Select</button>
             <button class="tool-button" data-tool="iso-line" type="button">Iso Line</button>
+            <button class="tool-button" data-tool="measure" type="button">Measure</button>
+            <button class="tool-button" data-tool="polygon" type="button">Polygon</button>
+            <button class="tool-button" data-tool="erase" type="button">Erase</button>
           </div>
           <span class="group-title">Tools</span>
         </section>
@@ -32,6 +35,23 @@
             <label class="tool-toggle"><input id="debug-snap-toggle" type="checkbox" checked />Debug Snap</label>
           </div>
           <span class="group-title">Snapping</span>
+        </section>
+
+        <section class="tool-group" aria-label="Scale tools">
+          <div class="tool-grid tool-grid--scale">
+            <label class="scale-label" for="unit-per-cell">Unit / Grid</label>
+            <input id="unit-per-cell" class="scale-input" type="number" min="0.01" step="0.01" value="1" />
+            <label class="scale-label" for="unit-name">Unit Name</label>
+            <input id="unit-name" class="scale-input" list="unit-name-options" value="ft" />
+            <datalist id="unit-name-options">
+              <option value="ft"></option>
+              <option value="in"></option>
+              <option value="m"></option>
+              <option value="cm"></option>
+            </datalist>
+            <div class="scale-display" id="scale-display">1 grid = 1 ft</div>
+          </div>
+          <span class="group-title">Scale</span>
         </section>
 
         <section class="tool-group" aria-label="View tools">
