Add grid-unit label toggle and iso lattice debug dots

--- a/editor.html
+++ b/editor.html
@@ -107,6 +107,7 @@
           <div class="tool-grid tool-grid--snap">
             <label class="tool-toggle"><input id="show-dimensions-toggle" type="checkbox" checked />Show dimensions</label>
             <label class="tool-toggle"><input id="continue-polyline-toggle" type="checkbox" checked />Continue polyline</label>
+            <label class="tool-toggle"><input id="show-grid-units-toggle" type="checkbox" />Show grid units</label>
           </div>
           <span class="group-title">Options</span>
         </section>
