Refine debug snap defaults and localize lattice overlay

--- a/editor.html
+++ b/editor.html
@@ -116,7 +116,7 @@
           <div class="tool-grid tool-grid--snap">
             <label class="tool-toggle"><input id="snap-grid-toggle" type="checkbox" checked />Snap to grid</label>
             <label class="tool-toggle"><input id="snap-mid-toggle" type="checkbox" checked />Snap to midpoint</label>
-            <label class="tool-toggle"><input id="debug-snap-toggle" type="checkbox" checked />Debug snap</label>
+            <label class="tool-toggle"><input id="debug-snap-toggle" type="checkbox" />Debug snap</label>
           </div>
           <span class="group-title">Snapping</span>
         </section>
